# synack-analyzer

./: Cargo.toml  Dockerfile  Makefile  README.md
dashboards/grafana/: dashboard.json
src/: main.rs
